--- a/cpp04/ex03/Makefile
+++ b/cpp04/ex03/Makefile
@@ -1,7 +1,7 @@
 CC = c++
-CFLAGS = -Wall -Wextra -Werror -std=c++98 #-fsanitize=address
+CFLAGS = -Wall -Wextra -Werror -std=c++98 #-fsanitize=address -g
 RM = rm -rf
-NAME = abstract
+NAME = interface
 
 SRCS = main.cpp AMateria.cpp Character.cpp Cure.cpp Ice.cpp MateriaSource.cpp
 
