--- a/cpp09/ex02/Makefile
+++ b/cpp09/ex02/Makefile
@@ -1,5 +1,5 @@
 CC = c++
-CFLAGS = -Wall -Wextra -Werror -std=c++98 -fsanitize=address
+CFLAGS = -Wall -Wextra -Werror -std=c++98 -fsanitize=address -g
 RM = rm -rf
 NAME = PMergeMe
 
