--- a/cpp09/ex02/Makefile
+++ b/cpp09/ex02/Makefile
@@ -3,7 +3,7 @@ CFLAGS = -Wall -Wextra -Werror -std=c++98 -fsanitize=address -g
 RM = rm -rf
 NAME = PMergeMe
 
-SRCS = main.cpp PMergeMe.cpp
+SRCS = main.cpp utils.cpp
 
 OBJS = $(SRCS:.cpp=.o)
 
